# prismdoc

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ABLATION.md  BENCHMARK.md  EXTENDING.md  GETTING_STARTED.md  PRD.md  TECH_SPEC.md  VERIFICATION.md  launch.md  mixed-modality.md
docs/diagrams/: architecture.drawio  cascade.drawio
examples/bench/: sample_table.txt  spec_smoke.yaml
examples/eval/: retail_dataset.json
examples/pdf/: pipeline_pdfplumber.yaml  pipeline_pymupdf4llm.yaml
examples/retail/: demo.yaml  make_sample.py  pipeline.yaml  pipeline_cascade.yaml  pipeline_figures.yaml
src/prismdoc/: __init__.py  cli.py  config.py  cost.py  errors.py  matching.py  models.py  observability.py  pipeline.py  registry.py  resilience.py  schema.py  tokens.py
src/prismdoc/api/: __init__.py  app.py
src/prismdoc/bench/: __init__.py  dataset.py  hub.py  infovqa.py  ocr_recall.py  runner.py  sroie.py
src/prismdoc/eval/: __init__.py  __main__.py  dataset.py  metrics.py  runner.py  sweep.py
src/prismdoc/stages/: __init__.py  archetype.py  base.py  cascade.py  chunked_extract.py  confidence.py  ensemble.py  extract.py  figures.py  hybrid_extract.py  ingest.py  normalize.py  parse.py  policy.py  provenance.py  repair.py  review.py  rules.py  table_extract.py  validate.py  verify.py
tests/: test_api.py  test_archetype.py  test_bench_hub.py  test_bench_ocr_recall.py  test_bound_input.py  test_cascade.py  test_chunked_extract.py  test_confidence.py  test_config_yaml.py  test_core_contracts.py  test_cost.py  test_ensemble.py  test_eval.py  test_extract_stage.py  test_figures.py  test_hybrid_extract.py  test_ingest_loaders.py  test_matching.py  test_observability.py  test_parse_stage.py  test_pdfplumber_parser.py  test_policy.py  test_provenance.py  test_providers.py  test_pymupdf4llm_parser.py  test_repair.py  test_resilience.py  test_retail_demo.py  test_review.py  test_rules.py  test_smoke.py  test_sweep.py  test_unreadable_docs.py  test_validate_normalize.py  test_verify.py  test_verify_column.py
