[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismdoc"
version = "0.0.0"
description = "Cost-aware, schema-driven document extraction pipeline (deploy-as-microservice)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docling = ["docling"]
llm = ["litellm"]

[tool.hatch.build.targets.wheel]
packages = ["src/prismdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
