[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismdoc"
version = "0.1.0"
description = "Cost-aware, schema-driven document extraction pipeline (deploy-as-microservice)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "prismdoc contributors" }]
keywords = ["document-extraction", "ocr", "llm", "pipeline", "invoice", "receipt", "rag"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn[standard]", "python-multipart"]
dev = [
    "pytest",
    "ruff",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "httpx",
]
docling = ["docling"]
llm = ["litellm"]

[project.scripts]
prismdoc = "prismdoc.cli:main"
prismdoc-eval = "prismdoc.eval.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prismdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
